update day 2 hackathon

--- a/posts/080924.md
+++ b/posts/080924.md
@@ -8,7 +8,7 @@ woke up super groggy. i've been sleep deprived for the second day. got to bainca
 
 so many issues, instructor with claude was too slow, concurrent threads were the way. to speed things up, we used llama3 on pure groq api, but litellm had better abstraction. then we used llama hosted on cerebras because it was almost 10x faster. then there were rate limits and max tokens per day. there was also issues with generating json, so `num_retries=1000` was the fix. then the responses weren't great, so it was gpt4o because claude 3.5 sonnet doesn't support json mode on lite llm.
 
-this hackathon was a much better experience. i knew i could count on my teammates, my last one felt like i was the only one rowing the sinking boat. we also had cursor to help out, i barely wrote any code by hand. in hackathons, you optimize for speed and execution, the fastest to debug and ship out the idea wins. i suppose if you're efficient with AI tools, and your goal is to just build, it's understandable. but i feel like i lack strong programming skills, it made me want to join recurse center. maybe sometime in the future.
+this hackathon was a much better experience. no staying up the entire night to code a streamlit app alone. i knew i could count on my teammates, my last one felt like i was the only one rowing the sinking boat. we also had cursor to help out, i barely wrote any code by hand. in hackathons, you optimize for speed and execution, the fastest to debug and ship out the idea wins. i suppose if you're efficient with AI tools, and your goal is to just build, it's understandable. but i feel like i lack strong programming skills, it made me want to join recurse center. maybe sometime in the future.
 
 nearing the deadline, watching the fog clear, the slides coming to shape and the demo working is one of the best feelings ever. vercel ceo came over to our table and we were running on over 400 doc files of vercel, it was so fun nerve-wracking but exciting to watch it run, especially with minutes left. everything aligned so well.
 
