--- a/posts/280924.md
+++ b/posts/280924.md
@@ -10,7 +10,7 @@ date: 'Sep 28, 2024'
 
 spent most of today researching recipes. i'm so sick of eating and cooking same food. went into a rabbit hole. the goal is to cook mille-feuille nabe but i need a pot.
 
-haven't bought groceries in chinatown for two weeks. went to 5 different stores to buy veges and fruits. shopped groceries for 2 hours and got so hungry that i was dizzy and nauseous. i was close to passing out. it's been like this the past few days or maybe week. i feel out of breath and sickly, getting cold sweats and headaches. what is happening to me?
+haven't bought groceries in chinatown for two weeks. went to 8 different stores to buy veges and fruits and condiments. shopped groceries for 2 hours and got so hungry that i was dizzy and nauseous. i was close to passing out. it's been like this the past few days or maybe week. i feel out of breath and sickly, getting cold sweats and headaches. what is happening to me?
 
 caved in and spent money to buy rice noodles at house of dim sum. was shocked when i saw the total was 16 dollars. i got so disappointed at myself for paying so much for rice noodles and was internally howling on the way home. arguing that i could totally buy a whole box of cooked meat for 16 dollars, but instead i paid for a bunch of flour and a few pieces of meat. made me even more averse to buy food in the future
 
