update joe black

--- a/posts/051024.md
+++ b/posts/051024.md
@@ -19,7 +19,11 @@ a few thoughts
 - death and taxes
 - him saying goodbye to his daughter
 
-many more thoughts but its late. overall this movie made me think about how mysterious life is, and the shortness of it. how all your achievements and work and material gains all reduce down to nothing but the relationships that you have and the kindness that you've shown to others and the good work that you've done. to life a long, peaceful life, to have experienced love, to have worked hard and suffer to build a legacy, to go through the ups and downs with family and friends, to be so lucky where you can wake up one day and say "I don't want anything more". that is true happiness.
+many more thoughts but its late. overall this movie made me think about how mysterious life is, and the shortness of it. how all your achievements and work and material gains all reduce down to nothing but the relationships that you have and the kindness that you've shown to others and the good work that you've done.
+
+to live a long, peaceful life, to have experienced love, to have worked hard and suffer to build a legacy, to go through the ups and downs with family and friends, to be so lucky where you can wake up one day and say "I don't want anything more". that is true happiness.
+
+---
 
 some quotes
 
