add past two days

--- a/posts/141024.md
+++ b/posts/141024.md
@@ -66,6 +66,8 @@ conceptual
 
 applied
 
+- [CS224W: Machine Learning with Graphs](https://web.stanford.edu/class/cs224w/)
+- [Colab Notebooks and Video Tutorials — pytorch_geometric documentation](https://pytorch-geometric.readthedocs.io/en/latest/get_started/colabs.html)
 - [Introduction to Graph Neural Networks with NVIDIA cuGraph-DGL | NVIDIA Technical Blog](https://developer.nvidia.com/blog/introduction-to-graph-neural-networks-with-nvidia-cugraph-dgl/)
 
 found these datasets to work with
