--- a/posts/190924.md
+++ b/posts/190924.md
@@ -8,7 +8,7 @@ back to the assignments and quiz grind again
 
 headache was so bad in stats class i felt nauseas. i think i have tmj. or i grind my teeth at night. my temples are being squeezed so badly.
 
-went to a cohere meetup, wanted to check it out for a bit because i still had homework due, had interesting conversations. still trying to figure out what i want to work on and what my interests are. was asked what my dream company is and i always say Apply by default. but there are so many cool companies to work at, the other FAANGs (Google, Microsoft, Meta), the unicorns (Instacart, Airbnb, Asana), and the interesting ones (Huggingface, Watershed, AllenAI, Cohere, etc.)
+went to a cohere meetup, wanted to check it out for a bit because i still had homework due, had interesting conversations. still trying to figure out what i want to work on and what my interests are. was asked what my dream company is and i always say apple by default. but there are so many cool companies to work at, the other FAANGs (Google, Microsoft, Meta), the unicorns (Instacart, Airbnb, Asana), and the interesting ones (Huggingface, Watershed, AllenAI, Cohere, etc.)
 
 Had a new idea for a chrome extension for my communications project,
 
