--- a/posts/221024.md
+++ b/posts/221024.md
@@ -6,4 +6,4 @@ date: 'Oct 22, 2024'
 
 feels like life just got hard reset. what was supposedly an exciting internship that will help jump start my career is now just a lie that provided all of us momentary happiness and comfort. the upside of this is i'm now more challenged, the grind doesn't stop,
 
-i'm now more motivated than ever to learn the fundamentals in AI, and build and post in public. time to read [Programming Massively Parallel Processors: A Hands-on Approach](https://learning.oreilly.com/library/view/programming-massively-parallel/9780323984638/) and [Machine Learning Engineering Open Book](https://github.com/stas00/ml-engineering?tab=readme-ov-file) and learn how transformers [from scratch](https://www.youtube.com/watch?v=ISNdQcPhsts).
+i'm now more motivated than ever to learn the fundamentals in AI, and build and post in public. time to read [Programming Massively Parallel Processors: A Hands-on Approach](https://learning.oreilly.com/library/view/programming-massively-parallel/9780323984638/) and [Machine Learning Engineering Open Book](https://github.com/stas00/ml-engineering?tab=readme-ov-file) and work [from scratch](https://www.youtube.com/watch?v=ISNdQcPhsts).
