add social study

--- a/posts/171224.md
+++ b/posts/171224.md
@@ -10,4 +10,4 @@ went to the social study in japantown with A. ordered latte with oat milk. start
 
 after 5 pm is when the social study has a no laptop rule, so i hit the classic japantown grocery shopping spots: woori market and nijiya market. i love their homemade kimchi and purple sweet potato chips. and nijiya for the miso paste, the big bottles of tea, and japanese curry blocks. i'm glad i have these two stores to satisfy my east asian grocery needs.
 
-didn't feel like heading home yet so i browsed the books at kinokuniya. found a section of sketch books, and a bunch of ghibli items. i remember feeling exhausted from carrying all the groceries, and feeling dumb for not getting it before leaving. and also feeling hungry. i went to sit down on one of the benches near marufuku, and while i ate my crackers, just watching everyone with friends and couples and families, and feeling isolated again, but also in peace being on my own, and feeling content.
+didn't feel like heading home yet so i browsed the books at kinokuniya. found a section of sketch books, and a bunch of ghibli items. i remember feeling exhausted from carrying all the groceries, and feeling dumb for not getting it before leaving. and also feeling hungry. i went to sit down on one of the benches near marufuku, and while i ate my crackers, just watching everyone with friends and couples and families, and feeling isolated again, but also in peace being on my own, knowing it's not like this forever.
