--- a/posts/010125.md
+++ b/posts/010125.md
@@ -16,7 +16,7 @@ date: 'Jan 1, 2025'
 
 woke up at 11. decluttered my safari tabs. wrote my goals for 2025. watched a bit of before midnight.
 
-i love the dinner scene they had, the conversations are so naturally. it feels like you're just sitting with them at the table, no script, just a bunch of friends gathered together. i loved this quote the most.
+i love the dinner scene they had in greece, the conversations are so natural. it feels like you're just sitting with them at the table, no script, just a bunch of friends gathered together. i loved this quote the most.
 
 > “...like a sunrise or sunset,
 > anything so ephemeral. Just like
