update nye post

--- a/posts/311224.md
+++ b/posts/311224.md
@@ -10,7 +10,7 @@ date: 'Dec 31, 2024'
 >
 > – George Saunders in The Braindead Megaphone
 
-went to sf dmv to get my california license done today. waited 2 hours at the dmv reading zhendong's letter. took 106 photographs around japantown, alamo square, and city hall on the way. also got a $130 fine by sfmta on the bus as i was heading home. a great new years gift from sf. went to coit tower to watch the fireworks with friends. and 2024 ended just like that. 2025 will be
+went to sf dmv to get my california license done today. waited 2 hours at the dmv reading zhendong's letter. took 106 photographs around japantown, alamo square, and city hall on the way. also got a $130 fine by sfmta on the bus as i was heading home. a great new years gift from sf. went to coit tower to watch the fireworks with friends. and 2024 ended just like that.
 
 a few reminders and principles i want to take into 2025 from my safari tabs
 
