--- a/posts/050125.md
+++ b/posts/050125.md
@@ -4,6 +4,8 @@ tags: 'journal'
 date: 'Jan 5, 2025'
 ---
 
+![columbus ave, fujifilm x100s](/images/transamericabus.jpeg)
+
 starting a weekly series sharing 7 things from my week.
 
 1. hiroshi yoshimura - [time forest](https://www.youtube.com/watch?v=9cSmrCOiby4)
