--- a/posts/050125.md
+++ b/posts/050125.md
@@ -22,7 +22,7 @@ starting a weekly series sharing 7 things from my week.
    - let curiosity roam, act from instinct and build to learn, pursue quality and agility equally,
    - "greatness is less a checklist than a delicate alignment of mindsets, methods, and morals"
    - "the gift of great creation is that, when done right, it looks both astonishingly fresh and deceptively familiar"
-7. these new paper back edition Books Paperback edition of Joan Didion
+7. these new [paper back edition](https://www.joandidion.org/new-joan-didion-paperbacks) books of Joan Didion
    - saw this at the city lights bookstore, obsessed with the colors
 
 ---
