--- a/posts/030125.md
+++ b/posts/030125.md
@@ -6,13 +6,13 @@ date: 'Jan 3, 2025'
 
 > "If a writer stops observing, he is finished. Experience is communicated by small details intimately observed." – Ernest Hemingway
 
-dental appointment in the morning, i calculated that each appointment costs me $400 ($4800 over 18 months, every 6 weeks)
+dental appointment in the morning, i calculated that each appointment costs me \$400 (\$4800 over 18 months, every 6 weeks)
 
-went to another 3 hours of lecture, i've also calculated that it costs ~$400 each class, (>$3k for 8 classes)
+went to another 3 hours of lecture, i've also calculated that it costs ~\$400 each class, (>\$3k for 8 classes)
 
 did homework during class, i can feel by brains squeezing and my systems failing past the 2 hour mark. 3 hour classes are torture.
 
-got a haircut at the same place, it costs $15. i'll try to talk more next time, i fell asleep halfway because of the relaxing music in the shop.
+got a haircut at the same place, it costs \$15. i'll try to talk more next time, i fell asleep halfway because of the relaxing music in the shop.
 
 got back on ucsf work grind. summary templates still don't perform that much better, open source models keeps hallucinating the information extraction. getting frustrated by the lack of good results. it's harder that i thought. my expectations need to be adjusted.
 
