update sunday post

--- a/posts/020225.md
+++ b/posts/020225.md
@@ -6,13 +6,44 @@ date: 'Feb 2, 2025'
 
 [The Wave, ca. 1869 by Gustave Courbet](/images/wavebygustave.jpeg)
 
+another rainy day. i prefer the rain. finished reading joshua. went to the chinese service, the pastor talked about the pentecost. D invited the church for lunch at kam lok, the food was so good. cleaned the house and went out for a photography walk at ferry building. it's a foggy day, the pictures are painted with a tone of mystery and ominous atmosphere.
+
+---
+
 1. [America Doesn't Know Tofu](https://asteriskmag.com/issues/02/america-doesn-t-know-tofu)
-2. [Why Skyscrapers Became Glass Boxes](https://www.construction-physics.com/p/why-skyscrapers-became-glass-boxes)
-3. [Principles by Nabeel](https://nabeelqu.substack.com/p/principles)
-4. [Advice to start a blog by Henrik Karlsson](https://www.henrikkarlsson.xyz/p/start-a-blog)
-5. [Advice by Finbarr Timbers](https://finbarr.ca/advice?curius=2138)
-6. [How to maintain a healthy gut](https://psyche.co/guides/how-to-maintain-a-healthy-gut-for-a-healthy-mind-and-body)
-7. [What is simple web design?](https://anthonyhobday.com/books/simpledesign/)
-8. [Alice’s Adventures in a differentiable wonderland](https://www.sscardapane.it/alice-book/)
-9. [Don't use cosine similarity](https://p.migdal.pl/blog/2025/01/dont-use-cosine-similarity)
-10. [Do Text Embeddings perfectly encode text?](https://thegradient.pub/text-embedding-inversion/)
+   - constraints lead to innovations (chinese buddhists tradition of not killing animals nurtured plants into satiating meat-free meals).
+   - the unbelievable diversity of vegan foods in China
+   - there are 20 types of tofu
+     - leave soy curds to be -> silken tofu
+     - spoon them into mold, press out some water -> soft, firm, think tofu sheets
+     - smoke, dehydrate, ferment, alkali-treat -> new varieties
+     - cook soy protein with fat, starch, seasoning -> fishcake-like tofu
+   - tofu is not just an ingredient, it's an entire category of protein
+   - a doctrine of economic development: "rising income increases demand for meat"
+   - "chinese people don’t reject common vegetarian foods because there is something fundamentally more valuable about meat. they do so because of perceived value — associations of plants with poverty and meat with prosperity"
+   - this fact is lost on animal advocates in the West, billions of dollars poured into dairy-free and meat-free products won't succeed on cost, taste, and convenience; they need to win on _perceived value_.
+2. [My Path to OpenAI – Greg Brockman](https://blog.gregbrockman.com/my-path-to-openai)
+   - Turing’s Computing Machinery and Intelligence
+   - "I decided that it didn’t make sense to try to do a startup while still in school. Instead, I was going to meet with people doing startups, and over time pattern match what works and what doesn’t"
+   - "sometimes an effort needs only someone bold enough to pronounce a goal, and then the right people will join them"
+   - Alan Kay quote, “the best way to predict the future is to invent it
+   - "An attractive feature of deep learning is that it is largely domain independent: many of the insights learned in one domain apply in other domains" – Ilya
+3. [The Power of Prayer](https://aeon.co/essays/why-prayer-is-a-problem-solving-practice-that-works)
+   - "prayer as collaborative problem-solving with God"
+   - ex: "He began his prayer by describing the problem he’s facing: mornings are tricky for him. He identifies his goal state: he wants to feel happy and not anxious in the mornings. And he makes a plan, saying he wants to ‘find ways to meet God in the mornings’ and works backward to determine that he needs to find a new morning routine"
+   - prayer helps people understand problems and changed their perspective on problems, make a plan, give a clear sense of what action to take after praying and motivation to tackle them
+   - in an experiment between prayer and thinking aloud (both similar in the the phases of problem-solving), people who pray feels more relief
+   - prayer [has](https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0306924) [psychological](https://europepmc.org/article/med/11584476) [benefits](https://aeon.co/essays/what-is-prayer-supposed-to-accomplish), it reduces [anxiety](https://anthrosource.onlinelibrary.wiley.com/doi/10.1111/j.1548-1433.2010.01305.x), heightens gratitude and wellbeing, or can make people more [resilient](https://www.scielo.br/j/reben/a/xxLd3rbdgdSv7YQNNqTL8ys/?lang=en)
+   - prayer is not just a quiet moment in the day, a time to ask for God for blessings, or an opportunity to remind yourself of your values, and what God wants for you. it's a cognitice practice chockfull of problem-solving resources.
+4. [DeepSeek, unstacked](https://read.substack.com/p/deepseek-unstacked)
+   - $5.6 million is probably only the last training run, but is still impressive – Nathan Lambert
+   - "High-Flyer’s ample coffers allow DeepSeek “to focus on research and exploration rather than vertical domains and applications" – [Liang Wenfeng](https://www.chinatalk.media/p/deepseek-ceo-interview-with-chinas)
+   - Unlike China’s leading battery and solar companies, DeepSeek’s funding was all private. “DeepSeek’s success arose not because of China’s innovation system but in spite of it. – [JS Tan](https://open.substack.com/users/227787701-js-tan?utm_source=mentions)
+   - the more computing power you have, the faster you can innovate. chip sanctions are still an effective means of maintaining a US lead. “While export controls may have some negative side effects, the overall impact has been slowing China’s ability to scale up AI.[ – Miles Brundage](https://open.substack.com/users/280070124-miles-brundage?utm_source=mentions) on ChinaTalk
+   - "AI might feel magical in its frictionlessness, but (human) writing—like walking—is valuable because of the friction"
+5. [What is simple web design?](https://anthonyhobday.com/books/simpledesign/)
+   - a collection of quotes from various people on what simple design means. it is content-first, timeless, materially honest, wordy, and more. it comes with a [list](https://anthonyhobday.com/books/simpledesign/examples.html) of examples.
+6. [Alice’s Adventures in a differentiable wonderland](https://www.sscardapane.it/alice-book/)
+   - a primer on designing neural newtorks, a.k.a. differentiable models. from math preliminaries and datasets to convolutional, attentional, and recurrent blocks, it's a great book with beautiful graphics and formulas.
+7. [Principles by Nabeel](https://nabeelqu.substack.com/p/principles)
+   - "the most important life lessons you learn are the hardest to communicate to others"
