fix image markdown

--- a/posts/020225.md
+++ b/posts/020225.md
@@ -4,7 +4,7 @@ tags: 'journal'
 date: 'Feb 2, 2025'
 ---
 
-[The Wave, ca. 1869 by Gustave Courbet](/images/wavebygustave.jpeg)
+![The Wave, ca. 1869 by Gustave Courbet](/images/wavebygustave.jpeg)
 
 another rainy day. i prefer the rain. finished reading joshua. went to the chinese service, the pastor talked about the pentecost. D invited the church for lunch at kam lok, the food was so good. cleaned the house and went out for a photography walk at ferry building. it's a foggy day, the pictures are painted with a tone of mystery and ominous atmosphere.
 
