--- a/posts/190125.md
+++ b/posts/190125.md
@@ -4,7 +4,7 @@ tags: 'journal'
 date: 'Jan 19, 2025'
 ---
 
-[Sunflowers along the Seine, ca. 1885-1886, Gustave Caillebotte](/images/seinesunflowers.jpg)
+![Sunflowers along the Seine, ca. 1885-1886, Gustave Caillebotte](/images/seinesunflowers.jpg)
 
 first time playing the piano at a church in SF. felt a ton of performance anxiety but i reminded myself that i'm playing for God and not for people. was still able to enjoy it most of the time. grateful i found this opportunity to play again.
 
