--- a/posts/260125.md
+++ b/posts/260125.md
@@ -4,7 +4,7 @@ tags: 'journal'
 date: 'Jan 26, 2025'
 ---
 
-[The Pond, Lowry, 1950](/images/thepond.jpeg)
+![The Pond, Lowry, 1950](/images/thepond.jpeg)
 
 went to the library for research grind. took photos around the chinese new year market. photgraphy is so essential to my life. i'm unable to go through life without capturing the world. it's irresistable.
 
