--- a/posts/270125.md
+++ b/posts/270125.md
@@ -4,7 +4,7 @@ tags: 'journal'
 date: 'Jan 27, 2025'
 ---
 
-[AAPM paper figure](/images/paperfigure.png)
+![AAPM paper figure](/images/paperfigure.png)
 
 > Albert Camus // "A spirit of art and madness lurks incessantly beneath the balconies and behind the drapes. It cannot die, and it prevents all from being lost."
 
