--- a/posts/090225.md
+++ b/posts/090225.md
@@ -11,7 +11,7 @@ date: 'Feb 9, 2025'
    - we have a new vaccine against Ebola that reduces chances by [84%](<https://www.thelancet.com/journals/laninf/article/PIIS1473-3099(24)00419-5/fulltext>) in Democratic Republic of Congo
    - genetics, not diet or exercise – are the [biggest predictor](https://www.nature.com/articles/s41586-024-08026-3) of which mice live longer
    - 6bil male chicks are killed in the egg industry each year. in ovo sexing tech (identifying sex of chicken before it hatches can avoid this) just [entered](https://www.innovateanimalag.org/blog/in-historic-moment-first-us-in-ovo-sexed-chicks-now-en-route-to-nestfresh-farms) the US market, Germany and France enacted a [ban on chick culling](https://www.euractiv.com/section/agriculture-food/news/germany-france-call-on-eu-countries-to-also-ban-culling-of-male-chicks/) in 2022.
-   - > 500k Americans have lung cancer at any given time. a mutation called EGFR drives faster tumor growth, common in Asia.
+   - 500k Americans have lung cancer at any given time. a mutation called EGFR drives faster tumor growth, common in Asia.
    - Purdue Pharma and the Sackler family paid 7.4 bil settlement with 15 US states for lawsuits around opioid crisis
    - second pig-to-human heart transplant failed, the pig was gene edited, adding genes that help with inflammation and blood clotting, and deleting the ones that trigger human immune responses. he died 40 days post-surgery
    - Chinese biotech has 6280 drugs in development, a 1200% increase over 10 years ago, and 2/3 as many as US
