fix image markdown

--- a/posts/310125.md
+++ b/posts/310125.md
@@ -4,7 +4,7 @@ tags: 'journal'
 date: 'Jan 31, 2025'
 ---
 
-[washington st, 7:06 p.m. taken with stops on iphone 13 mini](/images/rainyctown.jpeg)
+![washington st, 7:06 p.m. taken with stops on iphone 13 mini](/images/rainyctown.jpeg)
 
 > data outlives code. evals outlive models.
 
