update past few days

--- a/posts/050225.md
+++ b/posts/050225.md
@@ -8,6 +8,6 @@ date: 'Feb 5, 2025'
 
 went to get groceries for my curry. bitter melon is no longer in season. hua xing is closed for CNY. on a time crunch to cut the onions, carrots, and beef, turned up the heat higher than usual so it would cook faster, and did not put enough water, my base was burnt like charcoal. it gave my curry a bitter note, which isn't a bad thing. i put crabs from brenda's and scooped out the meat with chopsticks. cooking this meal was chaotic and messy.
 
-went to peets coffee with A, ordered matcha latte which was even worse than google's. nothing beats la promenade so far. something abou their matcha is unforgetable. worked on finding a suitable medical LLM to benchmark against for my AAPM paper for the most part. also replied some emails for hackathon, and worked on time series homework, and woke T up which was the most meaningful thing i did in those hours. it was soon 7 pm, the time when peets closes. went to browser books right beside, and found a few good books, namely "waiting for god" by simone weil, "private notebooks" by wittgenstein, and "living thoughts of kierkegaard" by w.h. auden.
+went to peets coffee with A, ordered matcha latte which was even worse than google's. nothing beats la promenade so far. something abou their matcha is unforgettable. worked on finding a suitable medical LLM to benchmark against for my AAPM paper for the most part. also replied some emails for hackathon, and worked on time series homework, and woke T up which was the most meaningful thing i did in those hours. it was soon 7 pm, the time when peets closes. went to browser books right beside, and found a few good books, namely "waiting for god" by simone weil, "private notebooks" by wittgenstein, and "living thoughts of kierkegaard" by w.h. auden.
 
 coworked with T while i studied for time series exam. i despise studying. i would choose struggling in my research or building side projects that don't work instead.
