fix grammar and spelling

--- a/posts/160125.md
+++ b/posts/160125.md
@@ -6,15 +6,15 @@ date: 'Jan 16, 2025'
 
 woke up and immediately dove into research. missed class again. met up to do group project.
 
-went for nvidia shorest hack. our idea was not fun enough to win. met someone from ISU here. food was chipotle food. their ruler is pretty cool, it costs 13.50 on their store apparently. felt stressed about making the app nice enough the entire time, and didn't even question if this was worth building. i felt it at certain points, but when the time was ticking down, i was only focused on making it nice. it's hard to identify fun ideas when all i've been doing is research. it's also so hard to make something nie in 2 hours, i lack the skills to specify what exactly i want, i need more reps at designing things.
+went for nvidia shortest hack. our idea was not fun enough to win. met someone from ISU here. food was chipotle food. their ruler is pretty cool; it costs 13.50 on their store apparently. felt stressed about making the app nice enough the entire time, and didn't even question if this was worth building. i felt it at certain points, but when the time was ticking down, i was only focused on making it nice. it's hard to identify fun ideas when all i've been doing is research. it's also so hard to make something nice in 2 hours, i lack the skills to specify what exactly i want, i need more reps at designing things.
 
 the ideas that were fun enough:
 
 - live cam search with natural language
-- pokemnon battles with real-life objects
+- pokemon battles with real-life objects
 - use voice AI to control v0
 - creating tiktok-style educational content (made by A)
 - using claude mcp for debugging
 - mitochondria detection from cells under microscope
 
-talked to jackmnin for 2 hours about my research. the density of takeaways from these talks are so high.
+talked to jackmin for 2 hours about my research. the density of takeaways from these talks is so high.
