--- a/posts/240225.md
+++ b/posts/240225.md
@@ -6,4 +6,4 @@ date: 'Feb 24, 2025'
 
 > "The greatest and most important problems of life are all in a certain sense insoluble... They can never be solved, but only outgrown. This 'outgrowing', as I formerly called it, on further experience was seen to consist in a new level of consciousness. Some higher or wider interest arose on the person’s horizon, and through this widening of view, the insoluble problem lost its urgency. It was not solved logically in its own terms, but faded out when confronted with a new and stronger life-tendency." – Carl Jung
 
-i woke up with the flu and did not do much the entire day. watched companion while trying to figure out how meldrx works. met with my prof and might be able to keep working in the lab. i'm inspired to start job searching now. i need to finish my projects and start leetcoding. i should be more worried about this, more agentic. i'm somehow feeling too calm about this. spoke to a mentor for the hackathon and it's surprising how fast things can make sense with someone guiding you. it's a good reminder to ask for help sooner, and set a time limit for how long you should spend time figuring things out by yourself. went to safeway to get bread and realized i've been missing out on so many deals. bought strawberries for $3 and saved $15 just from downloading the app.
+i woke up with the flu and did not do much the entire day. watched companion while trying to figure out how meldrx works. met with my prof and might be able to keep working in the lab. i'm inspired to start job searching now. i need to finish my projects and start leetcoding. i should be more worried about this, more agentic. i'm somehow feeling too calm about this. spoke to a mentor for the hackathon and it's surprising how fast things can make sense with someone guiding you. it's a good reminder to ask for help sooner, and set a time limit for how long you should spend time figuring things out by yourself. went to safeway to get bread and realized i've been missing out on so many deals. bought strawberries for \$3 and saved \$15 just from downloading the app.
