--- a/posts/310325.md
+++ b/posts/310325.md
@@ -8,8 +8,12 @@ i woke up too late again. my alarm went off at 7:30, but i woke up at 9 am. this
 
 a few questions i couldn't answer when A mock interviewed me
 
+- how does logistic regression work?
+- what is MLE?
+- type i vs type ii error
 - can values in pdf > 1?
--
+- what does independence between two variables mean?
+- does independence mean covariance is 0?
 
 studied DCN today. let's start from the basics. we have features for our models to make predictions, i.e. ad click predictions. but these individual features don't act independently, their combinations can have a unique effect - interactions.
 
