--- a/posts/310325.md
+++ b/posts/310325.md
@@ -25,9 +25,9 @@ why? this helps us explicitly capture interactions and add non-linearity
 
 you can cross catXcat, numXnum, catXnum, or even higher order cross (three or more features)
 
-no we know Deep neural networks learns these interactions implicitly. the multiple layers and ReLU can approximate complet functions. however they might be inefficient to learn specific simple multiplicative crosses, requiring many neurons or layers to learn.
+we know Deep neural networks learns these interactions implicitly. the multiple layers and ReLU can approximate complet functions. however they might be inefficient to learn specific simple multiplicative crosses, requiring many neurons or layers to learn.
 
-introducing: deep & cross network. the cross network is part of DCN, specifically designed to create tehse feature crosses explicitly.
+introducing: [deep & cross network](https://paperswithcode.com/method/dcn-v2). the cross network is part of DCN, specifically designed to create these feature crosses explicitly.
 
 the formula: $X_{l+1} = x_0 * {W_l * x_l + b_l} + x_l$ is mathematically structured to compute interactions between the original input features (x_0) and the representations learned so far (x_l).
 
@@ -52,6 +52,8 @@ and DCN's have been [evolving](https://mlfrontiers.substack.com/p/the-rise-of-de
   - ensures interpretability with two explicit sub-networks: Linear and Exponential cross networks
   - Self-Mask operation to filter noise and reduce the number of parameters in the Cross Network by half
   - fusion layer, multi-loss trade-off and calculation -> Tri-BCE, to provide appropriate supervision signals
+
+here's a [github](https://github.com/shenweichen/DeepCTR-Torch?tab=readme-ov-file) repo implement them in pytorch
 
 but when are they used in the multi-stage ranking system? they're often used in the l2 or final (reranking) stage.
 
