--- a/posts/270325.md
+++ b/posts/270325.md
@@ -23,35 +23,37 @@ why it helps?
 
 top-down vs bottom up
 
-- top down (tabulation)
-  - **iteration** and starts with a basecase
-  - order matters
-  - usually faster, no recursion overhead
-    ```py
-    # fibonacci
-    F = [0] * (n+1)
-    F[0] = 1
-    F[1] = 1
-    for i in range(2, n):
-        F[i] = F[i-1] + F[i-2]
-    ```
-- bottom-up (memoization)
+top down (tabulation)
 
-  - **recursion** and made efficient with memoization
-  - easier to write, order does not matter
-  - slower
+- **iteration** and starts with a basecase
+- order matters
+- usually faster, no recursion overhead
+  ```py
+  # fibonacci
+  F = [0] * (n+1)
+  F[0] = 1
+  F[1] = 1
+  for i in range(2, n):
+      F[i] = F[i-1] + F[i-2]
+  ```
 
-    ```py
-    memo = {}
-    def f(i):
-        if i < 2:
-            return i
+bottom-up (memoization)
 
-        if i not in memo:
-            memo[i] = f(i-1) + f(i-2)
+- **recursion** and made efficient with memoization
+- easier to write, order does not matter
+- slower
 
-        return memo[i]
-    ```
+  ```py
+  memo = {}
+  def f(i):
+      if i < 2:
+          return i
+
+      if i not in memo:
+          memo[i] = f(i-1) + f(i-2)
+
+      return memo[i]
+  ```
 
 when to use it?
 
