--- a/posts/140525.md
+++ b/posts/140525.md
@@ -8,4 +8,4 @@ i drove a zipcar (toyota corolla) to SFO with A to pick up my parents. i haven't
 
 it's interesting to see my parents here again. grateful for them and their support for my education. i find it hard to appreciate how privileged i am for being able to live in sf and study here at a private school. did i fully make use of my time here? did i maximize agency? looking back, i was tired a lot, and my self-confidence took a hit from my interviews with FAANG. but i'm now constantly considering what i truly want. and it's hard to do so when my life is so intermixed with expectations and desires influenced by the people in my life
 
-i looked into [Open Evidence](https://www.youtube.com/watch?v=nPOZ1nA2RIw) more and it's insane how they $107M funding, $75M from Sequoia in their series A. i want to work for this company. their models score >90% on USMLE. i wonder if they would release an API. i'll write about them for contrary next.
+i looked into [Open Evidence](https://www.youtube.com/watch?v=nPOZ1nA2RIw) more and it's insane how they \$107M funding, \$75M from Sequoia in their series A. i want to work for this company. their models score >90% on USMLE. i wonder if they would release an API. i'll write about them for contrary next.
