fix dollar sign markdown

--- a/posts/290725.md
+++ b/posts/290725.md
@@ -4,7 +4,7 @@ tags: 'journal'
 date: 'Jul 29, 2025'
 ---
 
-worked out of capitol one cafe. had avocado toast ($10) and matcha latte with soymilk ($3).
+worked out of capitol one cafe. had avocado toast (\$10) and matcha latte with soymilk (\$3).
 
 then went back for check out and took a lime scooter to go to the national gallery of art. i was sweating profusely. the weather is like a blanket of hot air wrapped around your body.
 
